ont-api: ont objects + internal-translators - minor performance improvements related to issue #30